--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 .user-nav {
   width: 100%;
+  height: 6rem;
   background-color: #0066b3;
   display: flex;
   align-items: center;
@@ -8,31 +9,31 @@
     display: flex;
     align-items: center;
     flex: 0 0 50%;
-    margin: 2rem 7rem; }
+    margin: 1rem 8rem; }
   .user-nav_icon1 {
-    height: 1.5rem;
-    width: 1.2rem;
+    height: 1.3rem;
+    width: 1.3rem;
     fill: white;
     color: white; }
   .user-nav_icon2 {
-    height: 1.5rem;
-    width: 1.2rem;
+    height: 1.3rem;
+    width: 1.3rem;
     fill: white;
     color: white; }
   .user-nav_notification1 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: white;
-    padding-left: 0.5rem;
-    padding-right: 5rem; }
+    padding-left: .75rem;
+    padding-right: 8rem; }
   .user-nav_notification2 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: white;
-    padding-left: 0.5rem; }
+    padding-left: .75rem; }
   .user-nav_links {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     flex: 1; }
     .user-nav_links > a {
       color: white;
@@ -40,37 +41,44 @@
       list-style: none; }
     .user-nav_links > p {
       color: white;
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       padding: 0 1rem; }
 
 .nave-bar {
+  height: 9rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  flex: 0 0 20%;
-  position: absolute;
-  top: 1.5rem;
-  left: 10rem; }
+  justify-content: center;
+  flex: 0 0 20%; }
+  .nave-bar_logo {
+    height: 14.2rem;
+    width: 7.1rem; }
   .nave-bar_list {
-    flex: 1;
+    text-decoration: none;
     list-style: none;
-    margin-left: 20rem; }
+    margin-left: 5rem; }
   .nave-bar_items {
-    font-size: 1.5rem;
+    flex: 1;
+    font-size: 1.3rem;
+    color: black;
     text-transform: uppercase;
-    margin-left: 10rem;
+    margin-left: 5rem;
     text-align: center; }
   .nave-bar_text {
     text-align: center;
-    justify-content: center;
+    justify-content: space-between;
     list-style: none;
     text-decoration: none;
-    padding-left: 2rem; }
+    margin-left: 3rem;
+    padding-left: 0.25rem; }
 
-.main-view {
-  height: 100rem;
+.school-view {
+  height: 50rem;
   width: 100%;
+  position: relative;
   background-image: url(../img/b1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   animation: educator 10s 6s infinite; }
 
 @keyframes educator {
@@ -83,22 +91,38 @@
   100% {
     background-image: url(../img/b1.jpg); } }
 
+.main-detail {
+  width: 80%;
+  height: 50rem;
+  background-color: blue;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .main-detail_text {
+    flex: 0 0 50%; }
+  .main-detail_heading {
+    font-size: 2.5rem;
+    color: black; }
+  .main-detail_paragraph {
+    font-size: 1rem; }
+
 .primary {
   width: 100%; }
 
 .navebar {
-  height: 10rem;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid red;
+  position: relative; }
+
+.school {
+  width: 100%;
   position: relative; }
 
 .main {
-  width: 100%;
-  height: 50rem;
-  border: 1px solid blue; }
+  width: 100%; }
 
 * {
   margin: 0;
