--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -1,6 +1,8 @@
-
+///////////////////////////////////////////////////////
+//////////////////////////////user-nav
 .user-nav{
     width: 100%;
+    height: 6rem;
     background-color: rgb(0, 102, 179);
     display: flex;
     align-items: center;
@@ -10,32 +12,32 @@
     display: flex;
     align-items: center;
     flex: 0 0 50%;
-    margin: 2rem 7rem;
+    margin: 1rem 8rem;
     
     }
         &_icon1{
-        height: 1.5rem;
-        width: 1.2rem;
+        height: 1.3rem;
+        width: 1.3rem;
         fill: white;
         color: white;
     }
         &_icon2{
-        height: 1.5rem;
-        width: 1.2rem;
+        height: 1.3rem;
+        width: 1.3rem;
         fill: white;
         color: white;
     }
         &_notification1{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         color: white;
-        padding-left: 0.5rem;
-        padding-right: 5rem;
+        padding-left: .75rem;
+        padding-right: 8rem;
 
     }
     &_notification2{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         color: white;
-        padding-left: 0.5rem;
+        padding-left: .75rem;
 
     }
     
@@ -43,63 +45,73 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         flex: 1;
         & > a{
             color: white;
             text-decoration: none;
             list-style: none;
-            // padding: 0 1rem;
         }    
         & > p{
             color: white;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             padding: 0 1rem;
         }
     }
     
 }
+///////////////////////////////////////////////////////
+//////////////////////////////nav-bar
 
 
 .nave-bar{
+    height: 9rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex: 0 0 20%;
-    position: absolute;
-    top: 1.5rem;
-    left: 10rem;
+    // position: absolute;
+    // top: 0rem;
+    // left: 5rem;
     
     &_logo{
-        
+        height: 14.2rem;
+        width: 7.1rem;
     }
     &_list{
-        flex: 1;
+        text-decoration: none;
         list-style: none;
-        margin-left: 20rem;
+        margin-left: 5rem;
     }
     &_items{
-        font-size: 1.5rem;
+        flex: 1;
+        font-size: 1.3rem;
+        color: black;
         text-transform: uppercase;
-        margin-left: 10rem;
+        margin-left: 5rem;
         text-align: center;
     }
     &_text{
-        // flex: 1;
         text-align: center;
-        justify-content: center;
+        justify-content: space-between;
         list-style: none;
         text-decoration: none;
-        padding-left: 2rem;
+        margin-left: 3rem;
+        padding-left: 0.25rem;
     }
 }
+///////////////////////////////////////////////////////
+//////////////////////////////school-view
 
-.main-view{
-        height: 100rem;
+.school-view{
+        height: 50rem;
         width: 100%;
+        position: relative;
         background-image: url(../img/b1.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
         animation: educator 10s 6s infinite;
-    
+            
     @keyframes educator {
         0%{
             background-image: url(../img/b2.jpg);
@@ -116,4 +128,27 @@
         
     }
 
+}///////////////////////////////////////////////////////
+//////////////////////////////main
+
+.main-detail{
+    width: 80%;
+    height: 50rem;
+    background-color: blue;
+    margin: 0 auto;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &_text{
+    flex: 0 0 50%;
+    }
+    &_heading{
+        font-size: 2.5rem;
+        color: black;
+    }
+    &_paragraph{
+        font-size: 1rem;
+    }
 }
