--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,9 +1,9 @@
 .primary{
     width: 100%;
+    
 }
 
 .navebar{
-    height: 10rem;
     width: 100%;
     display: flex;
     align-items: center;
@@ -11,7 +11,12 @@
     position: relative;
 }
 
+.school{
+    width: 100%;
+    position: relative;
+}
+
 .main{
     width: 100%;
-    height: 50rem;
+    // position: relative;
 }
